--- a/blazor/BlazorProducts.Client/BlazorProducts.Client/Shared/ProductList.razor
+++ b/blazor/BlazorProducts.Client/BlazorProducts.Client/Shared/ProductList.razor
@@ -1,4 +1,5 @@
 ﻿@inject IProductService ProductService 
+@inject NavigationManager NavigationManager
 @implements IDisposable 
 <h3>Products List</h3>
 <ul class="list-unstyled">
@@ -19,6 +20,8 @@
                     @GetPriceText(product)
                 </h5>
             </div>
+            <AuthorizeView Roles="Administrator"><h1>YOO</h1></AuthorizeView>
+
         </li>
     }
 </ul>
@@ -36,6 +39,9 @@ public void Dispose()
 {
     ProductService.OnChange -= StateHasChanged;
 }
+
+
+
 private string GetPriceText(Product product)
 {
     var variants = product.Variants;
